--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vercel": "^34.0.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18",
